syntax = "proto3";

package resources.internet;

import "buf/validate/validate.proto";
import "resources/common/content/content.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/internet;internet";

message Page {
  uint64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  uint64 domain_id = 5;
  // @sanitize: method=StripTags
  string path = 6 [(buf.validate.field).string.max_len = 128];
  // @sanitize: method=StripTags
  string title = 7 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
  // @sanitize: method=StripTags
  string description = 8 [(buf.validate.field).string = {
    min_len: 3
    max_len: 512
  }];
  PageData data = 9 [(buf.validate.field).required = true];
  optional string creator_job = 10;
  optional int32 creator_id = 11;
}

enum PageLayoutType {
  PAGE_LAYOUT_TYPE_UNSPECIFIED = 0;
  PAGE_LAYOUT_TYPE_BASIC_PAGE = 1;
  PAGE_LAYOUT_TYPE_LANDING_PAGE = 2;
}

// @dbscanner: json
message PageData {
  PageLayoutType layout_type = 1;
  optional ContentNode node = 2;
}

message ContentNode {
  resources.common.content.NodeType type = 1 [(buf.validate.field).enum.defined_only = true];
  // @sanitize: method=StripTags
  optional string id = 2;
  // @sanitize: method=StripTags
  string tag = 3;
  // @sanitize: method=StripTags
  map<string, string> attrs = 4;
  // @sanitize: method=StripTags
  optional string text = 5;
  repeated ContentNode content = 6;
  repeated ContentNode slots = 7;
}
